--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@next/mdx": "^15.4.4",
     "next": "15.4.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/node": "^20",
